test/files/neg/plugin-rafter-before-1/lib/plugins.jar.desired.sha1
aa034e5f24a9cc5c3d73e3fe79000c80e0028b81 ?plugins.jar
